[POSTS/SHOW] fix image ratio on small devices

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -62,8 +62,9 @@
 } */
 
 article img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  height: inherit !important;
 }
 
 .height_50 {
